--- a/src/main/webapp/hello.xhtml
+++ b/src/main/webapp/hello.xhtml
@@ -3,7 +3,8 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
  
     <h:head>
         <title>JSF 2.0 Hello World</title>
@@ -13,6 +14,10 @@
     	<h:form>
     	   <h:inputText value="#{helloBean.name}"></h:inputText>
     	   <h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
+		   <p:editor value="#{helloBean.text}" />
+    	   <h:inputText value="#{helloBean.name}"></h:inputText>
+    	   <h:inputText value="#{helloBean.name}"></h:inputText>
+    	   <h:inputText value="#{helloBean.name}"></h:inputText>
     	</h:form>
     </h:body>
 </html>
