--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -10,5 +10,6 @@
     <h:body bgcolor="white">
     	<h3>JSF 2.0 Hello World Example - welcome.xhtml</h3>
     	<h4>Welcome #{helloBean.name}</h4>
+    	<h:outputText value="#{helloBean.text}"></h:outputText>
     </h:body>
 </html>
